tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__ICanSeeEverythin-AAAAAAAAAAAAAAAAAAAHzg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1998,
  "prerequisites": [
    237
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With your new wand, you can make Goggles of Revealing. You can now see nodes clearly, more so than with the thaumometer, but all the time! Additionally, the goggles give you a 5 percent vis discount.\n\nSimple lens upgrades will grant you various seeing abilities as well.\n\nLater you can make more advanced goggles and even integrate the goggles into advanced armors.\n\nWith TC Node Tracker, it makes remembering nodes trivial. The default key is I. You can select from the list of nodes you have scanned, and an in-world arrow will show you the way. You can also sort the list.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "I Can See Everything",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    237
  ],
  "rewards": [],
  "tasks": []
}
