tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__ItsCalledtheThau-AAAAAAAAAAAAAAAAAAALRg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2886,
  "prerequisites": [
    14558237932340162640
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This device will allow automating the crucible. Check the research to the far right of the crucible for details.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "It's Called the Thaumatorium, OK?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    14558237932340162640
  ],
  "rewards": [],
  "tasks": []
}
