tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__JustTellMeWhatto-AAAAAAAAAAAAAAAAAAAFtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1461,
  "prerequisites": [
    226
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Don't want to guess at what has what aspect? Just want to get to work? Then scan this stuff. The first set should be scanned in order. If any of them don't work, try scanning something else first (especially the third set).\n\nWatering Can\nTorch\nCoal\nGrass Block\nTrapdoor\nChest\nGlass Block\nBleached Bone Block\nChicken\nSoul Sand\nPaper\nRotten Flesh\nWheat\nFlint\nObsidian\n\nAsh Cloud\nAny Dye\nWool\nSpider Eye\nSnowball\nMilk Bucket\nVanilla Hoe\nVanilla Pickaxe\nArrow\nVanilla Armor\nQuicksilver\nFence Gate\nIron Nugget\nGold\nZombie Brain\nEnder Pearl\nSlimeball\nTainted Anything. Try overfilling your cauldron to create flux goo to make the slimes (not in your base)\nEthereal Essence (any Aspect) from wisps OR Terra Wart\n\nObzinite Ingot\nPlatinum Metallic Powder\nFine Copper Wire\nMagnetite Dust\nThorium Dust\nA Pig\nNetherrack\nGold Armor\nBed\nLead (not the metal)\nGhast Tear\nClock\nCrystal Matrix Ingot\n\nThe last 5 aspects might only be obtainable by combining aspects or by creating a node that has them. You can combine:\n\nCognito + Ordo\nCognito + Vitium\nVacuos + Motus\nLux + Primordium\nHumanus + Iter\n\nNote that the above list is for aspects, you may need to scan things like the Nether Portal to unlock certain researches.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Just Tell Me What to Scan Already!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    226
  ],
  "rewards": [],
  "tasks": []
}
